# src/swagger/swagger.yaml
@@ -145,6 +145,19 @@ paths:
       responses:
         200:
           description: 모임 카테고리
+  /moim/myMoim:
+    get:
+      tags:
+        - moim
+      summary: 나의 모임 조회
+      description: 나의 모임을 조회한다.
+      parameters:
+        - name: users_id
+          in: query
+          required: true
+          schema:
+            type: int
+            example: 1
 
   /moim/getMoreMessage:
     post:
